<resources>
    <string name="app_name">Trip Reminder</string>


    <string name="facebook_app_id">3024190001138320</string>
    <string name="fb_login_protocol_scheme">fb3024190001138320</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDuuLYz0Rbfcp6Em7lDI9mWW8PDIjsQq_s</string>


    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Travelling</string>
    <string name="slide_1_desc">Your Trips in one place</string>

    <string name="slide_2_title">Amazing Experience</string>
    <string name="slide_2_desc">Organize Your Trips Scheduling , Save Your Time</string>

    <string name="slide_3_title">Always On Time</string>
    <string name="slide_3_desc">Always Be Notified , Control Your Notifications</string>

    <string name="addNote">add note</string>
    <string name="add_trip">Add Trip</string>
    <string name="cancel">cancel</string>
    <string name="add_a_note">Add a note</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="start_point">Start Point</string>
    <string name="destination">Destination</string>
    <string name="trip_name">Trip Name</string>
    <string name="enter_email_hint">Enter The Email</string>
    <string name="enter_password_hint">Enter The Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="remember_me">Remember_Me</string>
    <string name="login_button">Login</string>
    <string name="create_account">Create new Account</string>
    <string name="enter_name_hint">Enter The User Name</string>
    <string name="register_button">Register</string>
    <string name="already_have_account">Have Account?? Login</string>
    <string name="submit">Submit</string>
    <string name="restPasswordTitle">Rest Password</string>
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="rest_link_sent_to_you"> Email Sent, Please Check Your mail</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="twitter_api_key">oZyaoZ0uEex0356DN7JqUMtCP</string>
    <string name="twitter_api_secret">8oafUZmZmXs45bkI4s6OWMAylVYJrSdauAgEIWUtm9dsT0YzEr</string>
    <string name="login_with_twitter">Login with twitter</string>

    <string name="to">to</string>
    <string name="from">from</string>
    <string name="home_second">History</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="home">Home</string>
    <string name="menu_home">History</string>
    <string name="menu_gallery">Sync</string>
    <string name="logout">Logout</string>
    <string name="delete_trip">delete trip</string>
    <string name="cancel_trip">cancel trip</string>
    <string name="menu_slideshow">Logout</string>
    <string name="language">language</string>
    <string name="Reports">Show Reports</string>
    <string name="draw_on_map">Show Me On Maps</string>
    <string name="changeLanguage">Change language</string>


    <string-array name="times_array">
        <item>Don\'t Repeat</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>

    <string-array name="trip_direction_array">
        <item>One way Trip</item>
        <item>Round Trip</item>
    </string-array>
    <string name="title_activity_maps">Map</string>

    <string name="your_notes">your Notes    >> click on borders to collapse</string>

    <string name="total_trips">Total Trips</string>
    <string name="total_done_trips">Total Done Trips</string>
    <string name="total_canceled_trips">Total Canceled Trips</string>
    <string name="total_distance_trips">Total Distance</string>
    <string name="average_time">Average Time</string>
    <string name="total_average_speed">Average Speed</string>
    <string name="this_report_does_not_include_deleted_trips">This Report Does not include Deleted Trips</string>
    <string name="no_internet">No Internet Connection !!</string>
    <string name="internet_back">Back Online</string>
    <string name="hour">H</string>
    <string name="km">KM</string>
    <string name="click_again_to_exit">Click Again To Exit</string>
    <string name="update">Update</string>
    <string name="add_your_note">Add Your Note</string>
    <string name="save_your_notes">Save</string>
    <string name="no_upcoming_trip_available">"No Upcoming Trips"</string>
    <string name="no_history_trip_available">"No History Trips"</string>
    <string name="Going">Going</string>
    <string name="Back">Back</string>


</resources>