<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#bab6b6"
    android:layout_gravity="center"
    android:id="@+id/register_coordinator_layout"
    android:padding="10dp">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_register_username"
            android:layout_width="match_parent"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_name_hint"
                android:inputType="text"

                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginTop="25dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_register_email"
            android:layout_width="match_parent"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email_hint"
                android:inputType="textEmailAddress"

                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginTop="20dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_register_password"
            android:layout_width="match_parent"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password_hint"
                android:inputType="textPassword"

                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginTop="20dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/register_button"
            android:layout_gravity="center"
            android:textStyle="normal|bold|italic"
            android:background="@drawable/login_button"
            android:theme="@android:style/Animation" />

        <View
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="#071FF3">
        </View>

        <TextView
            android:id="@+id/tv_log_link"
            android:textSize="15sp"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/already_have_account"
            android:layout_gravity="end" />
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>