<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="10dp"
    android:background="@drawable/ic_back1"
    android:layout_gravity="center"
    android:id="@+id/login_coordinator_layout"
    android:padding="10dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/ic_back2" />


    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center_horizontal"
        android:visibility="gone" />

    <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:layout_gravity="center">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_login_email"
                android:layout_width="match_parent"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_email_hint"
                    android:inputType="text"

                    android:maxLines="1"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_login_password"
                android:layout_width="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_password_hint"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/restPassword"
                android:paddingEnd="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/forget_password"
                android:textDirection="locale"
                android:layout_gravity="end">
            </TextView>

            <Switch
                android:id="@+id/remember_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="end"
                android:textDirection="locale"
                android:text="@string/remember_me"
                />
            <Button
                android:id="@+id/btn_login"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/login_button"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:textColor="#ffffff"
                android:background="@color/com_facebook_button_background_color"
                android:layout_marginRight="20dp"/>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/login_with_google"
                android:layout_width="220dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginTop="5dp" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_with_facebook"
                android:layout_width="220dp"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:layout_gravity="center_horizontal" />


            <View
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="1dp"
                android:background="#0027FF">
            </View>

            <TextView
                android:id="@+id/tv_reg_link"
                android:textSize="15sp"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/create_account"
                android:layout_gravity="end" />

        </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
