<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_Btn_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:layout_margin="5dp"

    tools:context=".ui.activities.AddBtnActivity">

    <LinearLayout
        android:id="@+id/dddd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:weightSum="2"
        android:gravity="center_horizontal"
        >

        <Button
            android:id="@+id/add_trip_btn"
            android:layout_width="75dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/login_button"
            android:text="@string/add_trip"
            android:textColor="@color/white"

            android:textSize="8pt"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            app:icon="@drawable/ic_note_add_24px"/>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/dddd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/repeat_spin_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <Spinner
                    android:id="@+id/trip_way_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="48dp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/notes_parent_linear_Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/repeat_spin_linearlayout">


                <LinearLayout
                    android:id="@+id/notes_linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:orientation="horizontal">


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/note_text_field"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:layout_weight="1"
                        android:hint="@string/add_a_note"

                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:startIconContentDescription="Pick Date">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageButton
                        android:id="@+id/add_note_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight=".18"
                        android:background="@null"
                        android:src="@drawable/ic_add_circle_outline_24px" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/dest_autoComplete_Frag">


                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Going" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginTop="12dp"
                        android:layout_weight="1"
                        android:hint="@string/date"

                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                        app:startIconContentDescription="Pick Date"
                        app:startIconDrawable="@drawable/ic_date_range_24px">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/dateTextField"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:editable="false"
                            android:focusable="false"


                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginTop="12dp"
                        android:layout_weight="1"
                        android:hint="@string/time"

                        app:startIconContentDescription="Pick Date"
                        app:startIconDrawable="@drawable/ic_schedule_24px">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/timeTextField"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:editable="false"
                            android:focusable="false" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/repeat_spin_linearlayout"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">


                <TextView
                    android:id="@+id/BackText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Back"
                    android:visibility="gone"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="2"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/TextInputDate2"

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginTop="24dp"
                        android:layout_weight="1"
                        android:hint="@string/date"

                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/autoCompleteTVDestination"
                        app:startIconContentDescription="Pick Date"
                        app:startIconDrawable="@drawable/ic_date_range_24px">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/dateEdit_back"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:editable="false"
                            android:focusable="false"

                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/TextInputTime2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginTop="24dp"
                        android:layout_weight="1"
                        android:hint="@string/time"

                        android:visibility="gone"
                        app:startIconContentDescription="Pick Date"
                        app:startIconDrawable="@drawable/ic_schedule_24px">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/clockEdit_back"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:editable="false"
                            android:focusable="false" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

            </LinearLayout>


            <TextView
                android:id="@+id/dummytv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/start_point"

                android:textSize="6pt"
                app:layout_constraintTop_toBottomOf="@+id/trip_name_text_field" />

            <TextView
                android:id="@+id/dummytv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/destination"

                android:textSize="6pt"
                app:layout_constraintTop_toBottomOf="@+id/start_autoComplete_Frag" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/trip_name_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:hint="@string/trip_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Trip Name" />

            </com.google.android.material.textfield.TextInputLayout>

            <fragment
                android:id="@+id/start_autoComplete_Frag"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"

                app:layout_constraintTop_toBottomOf="@+id/dummytv"
                tools:layout_editor_absoluteX="8dp" />

            <fragment
                android:id="@+id/dest_autoComplete_Frag"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"

                app:layout_constraintTop_toBottomOf="@+id/dummytv2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>